[package]
name = "vm-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["async-channel"]}
cgroups-rs = "0.3.2"
clap = { version = "4.3.4", features = ["derive"] }
env_logger = "0.10.0"
futures-util = "0.3.28"
inotify = "0.10.1"
notify = "6.0.0"
postgres = "0.19.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sysinfo = "0.29.2"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"]}
tokio-postgres = "0.7.8"
tokio-tungstenite = "0.19.0"
tracing = { version = "0.1.37", features = ["log-always"]}

