[package]
name = "vm-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["async-channel"] }
axum = { version = "0.6.19", features = ["ws"] }
cgroups-rs = "0.3.2"
clap = { version = "4.3.4", features = ["derive"] }
futures-util = "0.3.28"
inotify = "0.10.1"
notify = "6.0.0"
postgres = "0.19.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.14"
sysinfo = "0.29.2"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7.8"
tokio-stream = "0.1.14"
tracing = { version = "0.1.37", features = ["log-always"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

